# smartNVR

./: .gitignore  Architecture_Proposal.md  BUG_FIXING_DISCIPLINE.md  Frigate_Database_Schema_Report.md  IMPLEMENTATION_SUMMARY.md  Overview_Roadmap.md  Phase10_Flutter_NVR_App.md  Phase11_Facial_Recognition.md  Phase12_Roadmap.md  Phase12_Technical_Feasibility_Proposal.md  Phase13_Roadmap.md  Phase13_Technical_Feasibility_Proposal.md  Phase15_Commercialization_Proposal.md  Phase15_Roadmap.md  Phase16_Roadmap.md  Phase16_Web_Panel_Proposal.md  Phase1_CLI_Agent_Roadmap.md  Phase2_REST_API_Roadmap.md  Phase3_Bots_Roadmap.md  Phase4_Flutter_Roadmap.md  Phase5_POS_Integration_Roadmap.md  Phase6_Server_Deployment_Roadmap.md  Phase7_Advanced_Features_Report.md  Phase7_Web_UI_Roadmap.md  Phase8_Agent_Performance_Evaluation.md  Phase8_Production_Deployment_Report.md  Phase8_Production_Deployment_Roadmap.md  Phase9_Server_Semantic_Upgrades.md  README.md  TECHNICAL_PROPOSAL.md  TECHNICAL_PROPOSAL_COMPREFACE.md  frigate-config.yml  frigate-docker-compose.yml
frigate-intelligence/: .dockerignore  .env.example  Dockerfile  Dockerfile.obfuscated  docker-compose.yml  pyproject.toml  settings.json
frigate-intelligence/data/: users.json
frigate-intelligence/scripts/: obfuscate_backend.sh
frigate-intelligence/src/frigate_intelligence/: main.py  server.py
frigate-intelligence/src/frigate_intelligence/config/: dependencies.py  settings.py
frigate-intelligence/src/frigate_intelligence/infrastructure/: logging_config.py
frigate-intelligence/src/frigate_intelligence/updater/: agent.py
frigate-intelligence/tests/integration/: test_api.py  test_frigate_sqlite_gateway.py
frigate-intelligence/tests/unit/domain/: test_sql_query.py
frigate-intelligence/tests/unit/infrastructure/: test_auth.py  test_container_capability.py  test_cron_service.py  test_frigate_config.py  (+6 more)
(+190 files in other folders)
