[project]
name = "frigate-intelligence"
version = "0.1.0"
description = "AI-powered Frigate NVR analytics platform"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "pytz>=2024.1",
    "python-telegram-bot>=20.0",
    "docker>=7.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]
build = [
    "pyarmor>=8.0.0",
]

[project.scripts]
frigate-ai = "frigate_intelligence.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frigate_intelligence"]
